2008-05-22  Miguel de Icaza  <miguel@novell.com>

	* SerializationCallbacks.cs: This lock has a high contention rate
	on ASP.NET web sites, with multiple cores we end up spending a lot
	of time on this check.   

	Rewrite this code to have two code paths since we know that the
	cache is append-only.  

2008-04-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* IFormatterConverter.cs
	* SerializationException.cs
	* StreamingContext.cs: Fix parameter names

2006-12-18  Lluis Sanchez Gual  <lluis@novell.com>

	* FormatterServices.cs: In GetFields, avoid creating a field
	  clone in some cases where it's not really necessary.

2006-11-13  Jensen Somers  <jensen.somers@gmail.com>

	* Fixed the Serializable attribute in OnDeserializedAttribute,
	OnDeserializingAttribute, OnSerializedAttribute and
	OnSerializingAttribute.

2006-11-13  Jensen Somers  <jensen.somers@gmail.com>

	* Removed [Serializable] from OnDeserializedAttribute,
	OnDeserializingAttribute, OnSerializedAttribute,
	OnSerializingAttribute.

2006-11-10  Jensen Somers  <jensen.somers@gmail.com>

	* Added ComVisibleAttribute in the ISerializable,
	ISerializationSurrogate and ISurrogateSelector interface.
	* Added the sealed keyword to the OnDeserializedAttribute,
	OnDeserializingAttribute, OnSerializedAttribute,
	OnSerializingAttribute and OptionalFieldAttribute class.

2006-10-30  Robert Jordan  <robertj@gmx.net>

	* Apply ComVisibleAttribute.

2006-10-29  Robert Jordan  <robertj@gmx.net>

	* ObjectManager.cs: Add NET_2_0 serialization callbacks.
	
2006-10-29  Robert Jordan  <robertj@gmx.net>

	* SerializationObjectManager.cs,
	SerializationCallbacks.cs: Add support for NET_2_0 serialization
	events. See bug #78594.

2006-08-06  Lluis Sanchez Gual  <lluis@novell.com>

	* ObjectManager.cs: Add support for nested IObjectReference.
	Fixes bug #78749.

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* ObjectIDGenerator.cs: Fix ArgumentNullException parameter.
